--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	<link rel="stylesheet" href="./assets/style.css">
+	
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@nina Carducci">
+	<meta name="twitter:creator" content="@nina Carducci">
+	<meta name="twitter:title" content="Nina Carducci, photographe professionnelle basée à Bordeaux">
+	<meta name="twitter:description" content="Capturer les moments les plus précieux de votre vie avec créativité et passion. Photographe professionnelle basée à Bordeaux, spécialisée dans les portraits, les mariages et les événements. Des images authentiques et intemporelles qui racontent votre histoire. Réservez votre séance photo dès maintenant !">
+	<meta name="twitter:image:src" content="https://jonathancornic.github.io/Portfolio-nina-carducci/assets/images/slider/1920/edward-1920.webp">
+	<meta name="twitter:image:alt" content="couple dansant dans un balet">
+
+	<meta property="og:title" content="Nina Carducci, photographe professionnelle basée à Bordeaux">
+	<meta property="og:locale" content="fr_FR">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://jonathancornic.github.io/Portfolio-nina-carducci/">
+	<meta property="og:author" content="Nina Carducci">
+	<meta property="og:description" content="Capturer les moments les plus précieux de votre vie avec créativité et passion. Photographe professionnelle basée à Bordeaux, spécialisée dans les portraits, les mariages et les événements. Des images authentiques et intemporelles qui racontent votre histoire. Réservez votre séance photo dès maintenant !">
+	<meta property="og:image" content="https://jonathancornic.github.io/Portfolio-nina-carducci/assets/images/slider/1920/edward-1920.webp">
+
+	
+	<title>Photographe professionnel Nina Carducci</title>
+	<meta name="description" content="Capturer les moments les plus précieux de votre vie avec créativité et passion. Photographe professionnelle basée à Bordeaux, spécialisée dans les portraits, les mariages et les événements. Des images authentiques et intemporelles qui racontent votre histoire. Réservez votre séance photo dès maintenant !">
+	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
-	<link rel="preload" fetchpriority="high" as="image" href="./assets/images/slider/ryoji_iwata.webp" type="image/webp">
-	<meta charset="UTF-8">
-	<title>Photographe professionnel Nina Carducci</title>
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
+	<link rel="stylesheet" href="./assets/style.min.css">
+
 	
+</head>
 <body>
 <div class="top-header">
 	<h3 class="name">Nina Carducci</h3>
@@ -34,13 +55,13 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji_iwata.webp" class="d-block w-100"  alt="...">
+				<img src="./assets/images/slider/ryoji_iwata.webp" class="d-block w-100" alt="..." >
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/nicholas_green.webp" class="d-block w-100"  alt="...">
+				<img src="./assets/images/slider/nicholas_green.webp" class="d-block w-100" alt="..." >
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/edward_cisneros.webp" class="d-block w-100"  alt="...">
+				<img src="./assets/images/slider/edward_cisneros.webp" class="d-block w-100" alt="..." >
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -55,7 +76,7 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.webp">
+		<img src="./assets/images/nina.webp" alt="image">
 	</div>
 	<div id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
@@ -68,15 +89,15 @@
 	<h3 class="title">Portfolio</h3>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron_paul.webp"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali_morshedlou.webp"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason_goodman.webp"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah_busing.webp"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade_tunji.webp"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob_owens.webp" width="440" height="440"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/van_prattenburg.webp"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin_neill.webp"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus_campos.webp"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron_paul.webp" alt="image"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali_morshedlou.webp" alt="image"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason_goodman.webp" alt="image"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah_busing.webp" alt="image"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade_tunji.webp" alt="image"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob_owens.webp" width="440" height="440" alt="image"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/van_prattenburg.webp" alt="image"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin_neill.webp" alt="image"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus_campos.webp" alt="image"/>
 		</div>
 	</div>
 	<div class="quote">
@@ -137,23 +158,23 @@
 		<div class="form-container">
 			<h3>Une question ? Une demande de devis ?</h3>
 			<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
-			<form action="" method="post">
-				<label>Nom</label>
-				<input type="text" name="nom" id="nom">
-				<label>Email</label>
-				<input type="email" name="email" id="email">
-				<label>Message</label>
+			<form method="post">
+				<label for="nom">Nom</label>
+				<input type="text" name="nom" id="nom" aria-label="nom">
+				<label for="email">Email</label>
+				<input type="email" name="email" id="email" aria-label="email">
+				<label for="message">Message</label>
 				<textarea name="message" id="message" cols="30" rows="10"></textarea>
-				<input type="submit" value="Envoyer"/>
+				<input type="submit" value="Envoyer" aria-label="Envoyer">
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.webp">
+			<img src="./assets/images/camera.webp" alt="image">
 		</div>
 	</div>
 </div>
 
-<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
+<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="./assets/maugallery.js"></script>
 <script src="./assets/scripts.js"></script>
