--- a/index.html
+++ b/index.html
@@ -176,17 +176,35 @@
 		<script src="./assets/scripts.js"></script>
 		<script type="application/ld+json">
 			{
-			"@context": "https://schema.org",
-			"@type": "Person",
-			"name": "Nina Carducci",
-			"url": "https://ninacarducci.github.io/",
-			"description": "Photographe spécialisée dans la capture d'émotions authentiques à travers la photographie.",
-			"jobTitle": "Photographe",
-			"sameAs": [
-				"https://www.facebook.com/ninacarducciphotography",
-				"https://www.instagram.com/ninacarducci",
-				"https://www.linkedin.com/in/ninacarducci"
-			]
+				"@context": "https://schema.org",
+				"@type": "ProfessionalService",
+				"name": "Nina Carducci",
+				"image": "https://tomlam0.github.io/nina-carducci/assets/images/nina.webp",
+				"address": {
+					"@type": "PostalAddress",
+					"streetAddress": "68 avenue Alsace-Lorraine",
+					"addressLocality": "Bordeaux",
+					"addressRegion": "Nouvelle-Aquitaine",
+					"postalCode": "33200",
+					"addressCountry": "France"
+				},
+				"url": "https://tomlam0.github.io/nina-carducci/",
+				"telephone": "+33556677889",
+				"openingHoursSpecification": [
+					{
+						"@type": "OpeningHoursSpecification",
+						"dayOfWeek": [
+							"Monday",
+							"Tuesday",
+							"Wednesday",
+							"Thursday",
+							"Friday"
+						],
+						"opens": "10:00",
+						"closes": "19:00"
+					}
+				],
+				"priceRange": "De 50€ par photo retouchée à 350€ par demi journée pour un shooting"
 			}
 		</script>
 
